--- a/index.html
+++ b/index.html
@@ -37,15 +37,7 @@
     </div>
   </div>
 
-  <script>
-    document.getElementById('loginForm').addEventListener('submit', function(e) {
-      e.preventDefault();
-      const username = document.getElementById('username').value.trim();
-      if (username) {
-        localStorage.setItem('username', username);
-        window.location.href = 'dashboard.html';
-      }
-    });
-  </script>
+   <!-- Moved logic to login.js -->
+  <script src="js/login.js"></script>
 </body>
 </html>
