add edit and delete task

--- a/dashboard.html
+++ b/dashboard.html
@@ -20,6 +20,8 @@
     <div class="add-task-box">
       <input type="text" id="taskInput" placeholder="Add a new task..." />
       <button id="addTaskBtn">+ Add Task</button>
+      <button id="clearAllBtn" class="btn danger">Clear All Tasks</button>
+
     </div>
 
     <div class="stats-filters">
@@ -44,4 +46,7 @@
   <script src="js/dashboard.js"></script>
   <script src="js/theme.js"></script>
 </body>
+<!-- Toast Notification -->
+<div id="toast" class="toast"></div>
+
 </html>
